update api in index

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <p>webmagic着重于页面抽取的工作。开发者可以使用xpath和正则表达式进行链接和内容的提取，支持链式API调用，以及单复数转换。</p>
 
-<pre><code>String content = page.getHtml().x("//div[@class='body']").r("这段话比较重要(.*)").toString();
+<pre><code>String content = page.getHtml().xpath("//div[@class='body']").regex("这段话比较重要(.*)").toString();
 </code></pre>
 </li>
 <li>
